--- a/css/menu.css
+++ b/css/menu.css
@@ -37,3 +37,14 @@ menu > a:hover:not([data-status='active']) svg{
   fill : var(--color-header-text-invert);
 }
 
+@media (max-width:1000px){
+  menu > a{
+    font-size:0;
+    padding:0;
+    justify-content:center;
+  }
+}
+
+@media (max-width:500px){
+  
+}
