--- a/css/style.css
+++ b/css/style.css
@@ -66,6 +66,29 @@ main{
   grid-row-end: 4;
 }
 
+@media (max-width:1000px){
+  :root{
+    --size-side-menu : var(--size-header-height);
+  }
+  body{
+    grid-template-rows    : var(--size-header-height) 1fr var(--size-header-height);
+  }
+}
+
+@media (max-width:500px){
+  :root{
+    --size-side-menu : 0;
+  }
+  /* body{
+    grid-template-columns : var(--size-side-menu) 1fr;
+    grid-template-rows    : var(--size-header-height) 1fr 100px;
+  } */
+  menu,
+  footer{
+    display:none;
+  }
+}
+
 
 
 
