--- a/css/header/hamburger.css
+++ b/css/header/hamburger.css
@@ -1,11 +1,11 @@
-header nav label{
+label[for='menu_toggle']{
   position:absolute;
-  top    : 15px;
-  left  : calc((var(--size-hamburger-width) + 5px) * -1);
-  width  : var(--size-hamburger-width);
-  height : var(--size-hamburger-height);
-  max-height : 100vh;
-  overflow-y:auto;
+  top    : 10px;
+  right  : 10px;
+  width  : var(--size-hamburger);
+  height : var(--size-hamburger);
+  /* transform:translate(0,-50%); */
+  z-index:10;
 }
 
 .hamburger{
@@ -14,7 +14,7 @@ header nav label{
   --color-bg-hover:rgb(160,160,160);
   --color-line:rgb(128,128,128);
   --color-line-hover:rgb(100,100,100);
-  display:block;
+  display:none;
   border:1px solid var(--color-bg);
   width:100%;
   height:100%;
@@ -31,7 +31,6 @@ header nav label{
 .hamburger:hover::after{
   background-color:var(--color-line-hover);
 }
-
 
 .hamburger > span,
 .hamburger::before,
@@ -55,25 +54,37 @@ header nav label{
   top:68%;
 }
 
-@media (max-width:500px){
-  nav .slide ul{
-    background-color:white;
-  }
-  nav .slide ul *{
-    color : black;
-  }
-}
-@media screen and (min-width:500px) and (max-width:799px){
+
+
+/* @media screen and (min-width:500px) and (max-width:799px){
   .hamburger{
     display:none;
   }
-  
 }
 @media screen and (min-width:800px){
   .hamburger{
     display:none;
   }
+} */
+
+@media (max-width:500px){
+  /* nav .slide ul{
+    background-color:white;
+  }
+  nav .slide ul *{
+    color : black;
+  } */
+  .hamburger{
+    display:block;
+  }
+  menu nav{
+    background-color:white;
+  }
+  menu nav *{
+    color : black;
+  }
 }
+
 
 
 
