--- a/css/header/nav.css
+++ b/css/header/nav.css
@@ -10,16 +10,12 @@ header .margin{
 }
 
 header nav{
-  
-
   margin-left:auto;
   display:flex;
   align-items:center;
-  /* width:100%; */
 }
 
 header .menu{
-  /* width:100%; */
   height:100%;
   display:flex;
   gap:1px;
@@ -65,29 +61,61 @@ header .menu .icon{
   fill:var(--color-header-text);
 }
 
-@media (max-width:500px){
-  header nav{
-    position:absolute;
-    top:0%;
-    right:-80%;
-    width:80%;
-    height:auto;
-    
-    background-color:white;
-    transition-property:right;
-    transition-duration:0.3s;
-    z-index:1000;
+
+label[for='menu_toggle']{
+  display:none;
+}
+
+@media (max-width:1000px){
+  header .menu li a{
+    display:inline-block;
+    padding:0 0px;
+    white-space:nowrap;
+    position:relative;
   }
-  header nav .menu{
+  label[for='menu_toggle']{
+    display:none;
+  }
+}
+
+@media (max-width:500px){
+  label[for='menu_toggle']{
+    display:block;
+  }
+  header nav{
+    /* position:absolute;
+    top:var(--size-header-height);
+    left:-100%;
+    width:80%; */
+    height:var(--size-header-height);
+    height: calc(var(--size-menu-icon) + 10px);
+    /* background-color:white; */
+    margin:0;
+    width:100%;
+    /* transition-property:left;
+    transition-duration:0.3s;
+    z-index:1000; */
+  }
+  /* header nav .menu{
     flex-direction:column;
     height:auto;
     width:100%;
+  } */
+  header .menu{
+    justify-content:flex-start;
+    width:100%;
+    height:100%;
+    background-color:var(--color-body-bg);
   }
-
   header .menu > *{
     padding:0;
+    flex-grow:1;
+    /* border-right:1px solid var(--color-body-bg); */
   }
-  header .menu-toggle ~ nav .menu > *{
+  /* header .menu > *:first-child{
+    border-left:1px solid var(--color-body-bg);
+  } */
+  /* header .menu-toggle ~ nav .menu > *{
     height:var(--size-menu-height-mobile);
     line-height:var(--size-menu-height-mobile);
     width:100%;
@@ -97,48 +125,7 @@ header .menu .icon{
     border-top:1px solid #aaa;
   }
   header .menu-toggle:checked ~ nav{
-    right: 0;
-    box-shadow:2px 2px 10px rgba(0,0,0,0.5);
-  }
-}
-
-@media (min-width:501px){
-  header .menu li a{
-    display:inline-block;
-    padding:0 0px;
-    white-space:nowrap;
-    position:relative;
-  }
-  /* header .menu li a::before{
-    content:"";
-    position:absolute;
-    left:0;
-    bottom:-10px;
-    display:block;
-    width:100%;
-    height:1px;
-    margin:0 auto;
-    background-color:var(--color-header-text);
-    transform:scaleX(0);
-    transition-property:transform;
-    transition-duration:0.3s;
-    transform-origin: right center;
-  }
-  header .menu li a:hover::before{
-    transform:scaleX(1);
-    transform-origin: left center;
+    left: 0;
+    box-shadow:5px 5px 20px rgba(0,0,0,0.5);
   } */
-}
-
-@media screen and (min-width:501px) and (max-width:1000px){
-  label[for='menu_toggle']{
-    display:none;
-  }
-  
-}
-
-@media screen and (min-width:1000px){
-  label[for='menu_toggle']{
-    display:none;
-  }
 }
