--- a/css/menu.css
+++ b/css/menu.css
@@ -42,6 +42,26 @@ menu nav > a:hover:not([data-status='active']) svg{
     padding:0;
     justify-content:center;
   }
+  menu nav > a:hover{
+    position:absolute;
+    font-size: 1.0rem;
+    padding-right:10px;
+  }
+  menu nav > a:not([data-status='active']):hover{
+    /* color:var(--color-font-invert); */
+    background-color:var(--color-menu-hover);
+  }
+  menu nav > a:hover svg{
+    margin:calc((var(--size-header-height) - var(--size-menu-icon)) / 2);
+    margin-right:calc((var(--size-header-height) - var(--size-menu-icon)) / 2 + 10px);
+  }
+  menu nav > a:not([data-status='active']):hover svg{
+    fill : var(--color-header-text-invert);
+  }
+  menu nav > a:hover + *{
+    height:calc(var(--size-header-height) * 2);
+    padding-top:var(--size-header-height);
+  }
 }
 
 @media (max-width:500px){
