--- a/css/menu.css
+++ b/css/menu.css
@@ -47,10 +47,6 @@ menu nav > a:hover:not([data-status='active']) svg{
     font-size: 1.0rem;
     padding-right:10px;
   }
-  menu nav > a:not([data-status='active']):hover{
-    /* color:var(--color-font-invert); */
-    background-color:var(--color-menu-hover);
-  }
   menu nav > a:hover svg{
     margin:calc((var(--size-header-height) - var(--size-menu-icon)) / 2);
     margin-right:calc((var(--size-header-height) - var(--size-menu-icon)) / 2 + 10px);
@@ -58,9 +54,12 @@ menu nav > a:hover:not([data-status='active']) svg{
   menu nav > a:not([data-status='active']):hover svg{
     fill : var(--color-header-text-invert);
   }
-  menu nav > a:hover + *{
+  menu nav > a:nth-of-type(1):hover + *{
     height:calc(var(--size-header-height) * 2);
     padding-top:var(--size-header-height);
+  }
+  menu nav > a:nth-of-type(n+2):hover + *{
+    margin-top:var(--size-header-height);
   }
 }
 
