--- a/css/page/contact.css
+++ b/css/page/contact.css
@@ -4,7 +4,7 @@ form{
   width:90%;
   max-width:800px;
   border-radius:8px;
-  box-shadow:4px 4px 20px rgba(0,0,0,0.3);
+  /* box-shadow:4px 4px 20px rgba(0,0,0,0.3); */
   margin:10px auto;
   padding: 0 20px;
 }
@@ -13,9 +13,9 @@ form > *{
   /* margin:20px 10px; */
   padding:20px 0;
 }
-form > * + *{
+/* form > * + *{
   border-top:1px solid rgb(200,200,200);
-}
+} */
 
 form .group{
   display:flex;
