--- a/css/page/login.css
+++ b/css/page/login.css
@@ -1,7 +1,7 @@
 
-main{
+/* main{
   position:relative;
-}
+} */
 
 form{
   display:block;
@@ -22,16 +22,17 @@ form{
 }
 
 .login{
-  position:absolute;
+  /* position:absolute;
   top:50%;
   left:50%;
-  transform:translate(-50%,-50%);
+  transform:translate(-50%,-50%); */
 	padding:40px;
 	border:0;
   border-radius:8px;
   width:450px;
   max-width:100%;
-  box-shadow:4px 4px 20px rgba(0,0,0,0.3);
+  margin:50px auto;
+  /* box-shadow:4px 4px 20px rgba(0,0,0,0.3); */
 }
 .login .input-group{
   margin:0 auto 20px;
