--- a/css/footer.css
+++ b/css/footer.css
@@ -6,6 +6,7 @@ footer{
   display:flex;
   align-items: flex-end;
   justify-content:center;
+  background-color:var(--color-bg);
 }
 
 @media (max-width:1000px){
