--- a/css/main.css
+++ b/css/main.css
@@ -7,6 +7,7 @@ main{
   /* height : calc(100% - var(--size-header-height)); */
   overflow-y:auto;
   padding:20px;
+  background-color:var(--color-bain-bg);
 }
 
 @media (max-width:1000px){
