--- a/css/menu.css
+++ b/css/menu.css
@@ -1,10 +1,15 @@
 body menu{
   padding:0;
   overflow:auto;
-  background-color:var(--color-bg);
+  /* background-color:var(--color-bg); */
 }
 
-menu nav > a{
+menu nav ul > li{
+  position:relative;
+}
+
+menu nav ul > li > a,
+menu nav ul > li > label{
   height: var(--size-menu-list);
   display:flex;
   align-items:center;
@@ -14,52 +19,100 @@ menu nav > a{
   color:var(--color-font);
   text-decoration:none;
 }
-menu nav > a svg{
+menu nav ul > li > a svg,
+menu nav ul > li > label svg{
   width:var(--size-menu-icon);
   height:var(--size-menu-icon);
   margin: 0 10px;
   fill : var(--color-font);
 }
 
-menu nav > a[data-status='active']{
+menu nav ul > li > a[data-status='active'],
+menu nav ul > li > label[data-status='active']{
   background-color:var(--color-01);
   color:var(--color-font-invert);
 }
-menu nav > a[data-status='active'] svg{
+menu nav ul > li > a[data-status='active'] *{
+  color:var(--color-font-invert);
+}
+menu nav ul > li > label[data-status='active'] svg,
+menu nav ul > li > a[data-status='active'] svg{
   fill : var(--color-font-invert);
 }
 
-menu nav > a:hover:not([data-status='active']){
+menu nav ul > li > a:hover:not([data-status='active']),
+menu nav ul > li > label:hover:not([data-status='active']){
   background-color:var(--color-menu-hover);
   color:var(--color-header-text-invert);
 }
-menu nav > a:hover:not([data-status='active']) svg{
+menu nav ul > li > a:hover:not([data-status='active']) *{
+  color:var(--color-header-text-invert);
+}
+menu nav ul > li > a:hover:not([data-status='active']) svg,
+menu nav ul > li > label:hover:not([data-status='active']) svg{
   fill : var(--color-header-text-invert);
 }
 
+/* Sub Menu */
+menu nav input[type='checkbox']{
+  display:none;
+}
+menu nav > ul > li > ul{
+  display:none;
+}
+menu nav > ul > li > ul > li > a{
+  padding-left:30px;
+}
+menu nav > ul > li:has(ul)::after{
+  content : '';
+  display:block;
+  width:10px;
+  height:10px;
+  position:absolute;
+  top: calc(var(--size-menu-list) / 2 - 5px);
+  right: 15px;
+  transform-origin:center;
+  transform:rotate(45deg);
+  border-style:solid;
+  border-color:var(--color-font);
+  border-width: 1px 1px 0 0;
+}
+menu nav > ul > li:has(input[type='checkbox']:checked)::after{
+  transform:rotate(135deg);
+}
+menu nav > ul > li:has(input[type='checkbox']:checked) > ul{
+  display:block;
+}
+
 @media (max-width:1000px){
-  menu nav > a{
+  menu nav > ul > li > a,
+  menu nav > ul > li > label{
     font-size:0;
     padding:0;
     justify-content:center;
   }
-  menu nav > a:hover{
+  menu nav > ul > li > a:hover,
+  menu nav > ul > li > label:hover{
     position:absolute;
     font-size: 1.0rem;
     padding-right:10px;
   }
-  menu nav > a:hover svg{
+  menu nav > ul > li > a:hover svg,
+  menu nav > ul > li > label:hover svg{
     margin:calc((var(--size-header-height) - var(--size-menu-icon)) / 2);
     margin-right:calc((var(--size-header-height) - var(--size-menu-icon)) / 2 + 10px);
   }
-  menu nav > a:not([data-status='active']):hover svg{
+  menu nav > ul > li > a:not([data-status='active']):hover svg,
+  menu nav > ul > li > label:not([data-status='active']):hover svg{
     fill : var(--color-header-text-invert);
   }
-  menu nav > a:nth-of-type(1):hover + *{
+  menu nav > ul > li > a:nth-of-type(1):hover + *,
+  menu nav > ul > li > label:nth-of-type(1):hover + *{
     height:calc(var(--size-header-height) * 2);
     padding-top:var(--size-header-height);
   }
-  menu nav > a:nth-of-type(n+2):hover + *{
+  menu nav > ul > li > a:nth-of-type(n+2):hover + *,
+  menu nav > ul > li > label:nth-of-type(n+2):hover + *{
     margin-top:var(--size-header-height);
   }
 }
@@ -82,7 +135,8 @@ menu nav > a:hover:not([data-status='active']) svg{
     transition-property:left;
     transition-duration:0.3s;
   }
-  menu nav > a{
+  menu nav ul > li > a,
+  menu nav ul > li > label{
     font-size:1.0rem;
     justify-content:flex-start;
   }
