--- a/css/menu.css
+++ b/css/menu.css
@@ -1,7 +1,7 @@
 body menu{
   padding:0;
   overflow:auto;
-  /* background-color:var(--color-bg); */
+  background-color:var(--color-bg);
 }
 
 menu nav ul > li{
@@ -64,12 +64,13 @@ menu nav > ul > li > ul > li > a{
   padding-left:30px;
 }
 menu nav > ul > li:has(ul)::after{
+  --size-arrow:10px;
   content : '';
   display:block;
-  width:10px;
-  height:10px;
+  width:var(--size-arrow);
+  height:var(--size-arrow);
   position:absolute;
-  top: calc(var(--size-menu-list) / 2 - 5px);
+  top: calc(var(--size-menu-list) / 2 - (var(--size-arrow) / 2));
   right: 15px;
   transform-origin:center;
   transform:rotate(45deg);
@@ -85,35 +86,67 @@ menu nav > ul > li:has(input[type='checkbox']:checked) > ul{
 }
 
 @media (max-width:1000px){
-  menu nav > ul > li > a,
-  menu nav > ul > li > label{
+  /* body menu{
+    overflow:visible;
+  } */
+  menu nav ul > li > a,
+  menu nav ul > li > label{
     font-size:0;
     padding:0;
     justify-content:center;
   }
-  menu nav > ul > li > a:hover,
-  menu nav > ul > li > label:hover{
+  menu nav ul > li > a *,
+  menu nav ul > li > label *{
+    font-size:0;
+  }
+  
+  /* menu nav ul > li{
+    height:var(--size-header-height);
+  }
+  menu nav ul > li > a{
+    position:relative;
+  }
+
+  menu nav ul > li > a > span{
+    position:absolute;
+    left:calc(100% + 1px);
+    font-size: 1.0rem;
+    padding:10px;
+    white-space:nowrap;
+    background-color:var(--color-bg);
+  } */
+
+
+  /* menu nav ul > li > a:hover,
+  menu nav ul > li > label:hover{
     position:absolute;
     font-size: 1.0rem;
     padding-right:10px;
   }
-  menu nav > ul > li > a:hover svg,
-  menu nav > ul > li > label:hover svg{
+  menu nav ul > li > a:hover svg,
+  menu nav ul > li > label:hover svg{
     margin:calc((var(--size-header-height) - var(--size-menu-icon)) / 2);
     margin-right:calc((var(--size-header-height) - var(--size-menu-icon)) / 2 + 10px);
   }
-  menu nav > ul > li > a:not([data-status='active']):hover svg,
-  menu nav > ul > li > label:not([data-status='active']):hover svg{
+  menu nav ul > li > a:not([data-status='active']):hover svg,
+  menu nav ul > li > label:not([data-status='active']):hover svg{
     fill : var(--color-header-text-invert);
   }
-  menu nav > ul > li > a:nth-of-type(1):hover + *,
-  menu nav > ul > li > label:nth-of-type(1):hover + *{
+  menu nav ul > li:nth-of-type(1) + * > a:hover,
+  menu nav ul > li:nth-of-type(1) + * > label:hover{
     height:calc(var(--size-header-height) * 2);
     padding-top:var(--size-header-height);
   }
-  menu nav > ul > li > a:nth-of-type(n+2):hover + *,
-  menu nav > ul > li > label:nth-of-type(n+2):hover + *{
+  menu nav ul > li:nth-of-type(n+2) + * > a:hover,
+  menu nav ul > li:nth-of-type(n+2) + * > label:hover{
     margin-top:var(--size-header-height);
+  } */
+  menu nav > ul > li:has(ul)::after{
+    --size-arrow:5px;
+    right: 5px;
+  }
+  menu nav > ul > li > ul > li > a{
+    padding-left:0px;
   }
 }
 
