--- a/css/footer.css
+++ b/css/footer.css
@@ -9,7 +9,7 @@ footer{
   background-color:var(--color-bg);
 }
 
-@media (max-width:1000px){
+@media (min-width:501px) and (max-width:1000px){
   footer{
     font-size:0;
     display:flex;
