--- a/css/menu.css
+++ b/css/menu.css
@@ -85,10 +85,7 @@ menu nav > ul > li:has(input[type='checkbox']:checked) > ul{
   display:block;
 }
 
-@media (max-width:1000px){
-  /* body menu{
-    overflow:visible;
-  } */
+@media (min-width:501px) and (max-width:1000px){
   menu nav ul > li > a,
   menu nav ul > li > label{
     font-size:0;
@@ -99,48 +96,6 @@ menu nav > ul > li:has(input[type='checkbox']:checked) > ul{
   menu nav ul > li > label *{
     font-size:0;
   }
-  
-  /* menu nav ul > li{
-    height:var(--size-header-height);
-  }
-  menu nav ul > li > a{
-    position:relative;
-  }
-
-  menu nav ul > li > a > span{
-    position:absolute;
-    left:calc(100% + 1px);
-    font-size: 1.0rem;
-    padding:10px;
-    white-space:nowrap;
-    background-color:var(--color-bg);
-  } */
-
-
-  /* menu nav ul > li > a:hover,
-  menu nav ul > li > label:hover{
-    position:absolute;
-    font-size: 1.0rem;
-    padding-right:10px;
-  }
-  menu nav ul > li > a:hover svg,
-  menu nav ul > li > label:hover svg{
-    margin:calc((var(--size-header-height) - var(--size-menu-icon)) / 2);
-    margin-right:calc((var(--size-header-height) - var(--size-menu-icon)) / 2 + 10px);
-  }
-  menu nav ul > li > a:not([data-status='active']):hover svg,
-  menu nav ul > li > label:not([data-status='active']):hover svg{
-    fill : var(--color-header-text-invert);
-  }
-  menu nav ul > li:nth-of-type(1) + * > a:hover,
-  menu nav ul > li:nth-of-type(1) + * > label:hover{
-    height:calc(var(--size-header-height) * 2);
-    padding-top:var(--size-header-height);
-  }
-  menu nav ul > li:nth-of-type(n+2) + * > a:hover,
-  menu nav ul > li:nth-of-type(n+2) + * > label:hover{
-    margin-top:var(--size-header-height);
-  } */
   menu nav > ul > li:has(ul)::after{
     --size-arrow:5px;
     right: 5px;
@@ -153,28 +108,27 @@ menu nav > ul > li:has(input[type='checkbox']:checked) > ul{
 @media (max-width:500px){
   menu{
     width:auto;
-    /* position:relative; */
   }
   menu nav{
     position:absolute;
-    /* top:calc(var(--size-header-height) * 2); */
     top: calc(var(--size-header-height) + var(--size-menu-icon) + 10px);
     left:-100%;
     z-index:2;
     width:80%;
-    max-height:(100vh - var(--size-header-height) * 2);
+    max-height : calc(100vh - var(--size-header-height) - (var(--size-menu-icon) + 10px)); 
+    /* max-height:(100vh - var(--size-header-height) * 2); */
     box-shadow:5px 5px 20px rgba(0,0,0,0.5);
     overflow-y:auto;
     transition-property:left;
     transition-duration:0.3s;
   }
-  menu nav ul > li > a,
+  /* menu nav ul > li > a,
   menu nav ul > li > label{
     font-size:1.0rem;
     justify-content:flex-start;
-  }
-  menu .menu-toggle ~ nav > *{
-    height:var(--size-menu-height-mobile);
+  } */
+  menu .menu-toggle ~ nav > ul > *{
+    min-height:var(--size-menu-height-mobile);
     line-height:var(--size-menu-height-mobile);
     width:100%;
     text-align:center;
