--- a/css/header/hamburger.css
+++ b/css/header/hamburger.css
@@ -15,7 +15,7 @@ label[for='menu_toggle']{
   --color-line:rgb(128,128,128);
   --color-line-hover:rgb(100,100,100);
   display:none;
-  border:1px solid var(--color-bg);
+  /* border:1px solid var(--color-bg); */
   width:100%;
   height:100%;
   position:relative;
@@ -23,9 +23,9 @@ label[for='menu_toggle']{
   cursor:pointer;
   background-color:white;
 }
-.hamburger:hover{
+/* .hamburger:hover{
   border-color:var(--color-bg-hover);
-}
+} */
 .hamburger:hover > span
 .hamburger:hover::before,
 .hamburger:hover::after{
