--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@
   --size-footer-height : 60px;
   --size-side-menu     : 200px;
   --size-font          : 14px;
-  --color-01           : #16A085;
+  --color-01           : #01038a;
   --color-02           : #17a7e9;
   --color-03           : #f1f1f9;
   --color-bg           : white;
